trunk/Archive2/26/e272587b793430/output
main.cpp:7:5: error: redefinition of 'foo'
int foo<int, int>(int, int) {
    ^
main.cpp:7:5: note: previous definition is here
1 error generated.
