trunk/Archive2/26/e272587b793430/main.cpp


template <typename... Args>
int foo(Args... args) = delete;

template <>
int foo<int, int>(int, int) {
    return 1;    
}

int main() {

}